Fixed SVG dot bug on site with CSS. Site elements on screen get disfigured when lowering the width of the browser window, need to add a cutoff width where a horizontal scroll bar shows.

--- a/views/content/style/comments.css
+++ b/views/content/style/comments.css
@@ -76,6 +76,7 @@ COMMENTS SECTION
 	display: none;
 	background-color: #1f1f1f;
 	padding: 15px;
+	width: 85vw;
 }
 
 .container .comments #theComments .morerepliesbtn {
