--- a/views/content/style/videoplayer.css
+++ b/views/content/style/videoplayer.css
@@ -4,7 +4,7 @@ VIDEO AND RECCOMENDATIONS
 
 .player-container {
 	display: flex;
-	width: 1300px;
+	width: 85%;
 }
 
 /*
@@ -13,7 +13,7 @@ VIDEO BEING VIEWED
 
 .player-container .video-container {
 	position: relative;
-	width: 50%;
+	width: 100%;
 	height: auto;
 	background-color: rgb(32, 32, 32);
 }
